/*
 *  UCF COP3330 Fall 2021 Assignment 3 Solution
 *  Copyright 2021 Amos Luo
 */

package ex45;

public class replaceWord {
    public String replaceWords(String input){

        //Scan through string and replace
        String newString = input.replaceAll("utilize","use");
        return newString;
    }
}
